// Extracted from: Spotify 1.1.33.569 (Windows)

syntax = "proto3";

package spotify.login5.v3.challenges;

import "google/protobuf/duration.proto";

option objc_class_prefix = "SPTLogin5";
option java_multiple_files = true;
option optimize_for = CODE_SIZE;
option java_package = "com.spotify.login5.v3.challenges.proto";

message HashcashChallenge {
    bytes prefix = 1;
    int32 length = 2;
}

message HashcashSolution {
    bytes suffix = 1;
    google.protobuf.Duration duration = 2;
}
